--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "webpack": "webpack --config webpack/webpack.build.config.js",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "publish": "lerna publish --skip-git", 
+    "publish": "lerna publish --skip-git",
     "server": "lerna run server",
     "clean": "lerna clean && rimraf ./node_modules",
     "add": "node ./packages/cli/src/index.js"
@@ -46,8 +46,8 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^6.0.1",
     "read-pkg": "^2.0.0",
+    "sass": "^1.69.5",
     "sass-loader": "^10.4.1",
     "slick-carousel": "^1.6.0",
     "style-loader": "^0.16.1",
